OESE-293 fix modal width on mobile not consistent

--- a/css/nalrc.css
+++ b/css/nalrc.css
@@ -610,6 +610,7 @@ font-size:12px; background:#ffffff; border-bottom-left-radius: 8px; border-botto
 	.nalrc-banner .nalrc-nav { height:300px; }
 	.nalrc-slider #oese-acf-slider { height:300px; }
 	.nalrc-header .nalrc-wrapper img { width:100%; }
+	.page-template-nalrc-template .usacustomHtml5MapStateInfo .modal-map-details-popup .modal-dialog { width:100%; }
 }
 @media only screen and (max-width:1050px){
 	.nalrc-banner .nalrc-nav { 
